[package]
name = "rror"
version = "0.1.1"
edition = "2021"
authors = ["Vladas Zakrevksis <146100@gmail.com>"]
description = "Error handling"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/VladasZ/rror"
repository = "https://github.com/VladasZ/rror"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
